[TASK] Refactoring code, JS, separate logic between Controller and Model
