# app/Http/Controllers/Api/EmployeeController.php
@@ -3,12 +3,16 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\Position;
+use Illuminate\Contracts\Foundation\Application;
+use Illuminate\Contracts\View\Factory;
+use Illuminate\Contracts\View\View;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Log;
+use Illuminate\Support\Facades\Storage;
 use Illuminate\Support\Facades\Validator;
 use App\Models\Employee;
-use Yajra\DataTables\DataTables;
-
 use OpenApi\Annotations as OA;
 
 /**
@@ -22,6 +26,22 @@ use OpenApi\Annotations as OA;
 
 class EmployeeController extends Controller
 {
+    private array $formData = [];
+
+    /**
+     * Get a list of employees.
+     *
+     * @param Request $request
+     * @return mixed
+     *
+     * @OA\Get(
+     *     path="/employees",
+     *     summary="Get a list of employees",
+     *     tags={"Employees"},
+     *     @OA\Response(response="200", description="Successful operation"),
+     *     @OA\Response(response="500", description="Server error"),
+     * )
+     */
     public function index(Request $request)
     {
         if ($request->ajax()) {
@@ -31,7 +51,19 @@ class EmployeeController extends Controller
         return view('employees.index');
     }
 
-    public function store(Request $request)
+    /**
+     * Create a new employee.
+     *
+     * @OA\Post(
+     *     path="/employees",
+     *     tags={"Employees"},
+     *     summary="Create a new employee",
+     *     @OA\Response(response="201", description="Employee created successfully"),
+     *     @OA\Response(response="422", description="Unprocessable Entity"),
+     *     @OA\Response(response="500", description="Server error"),
+     * )
+     */
+    public function store(Request $request): JsonResponse
     {
         $error = Validator::make($request->all(), Employee::getValidationRules());
 
@@ -39,16 +71,21 @@ class EmployeeController extends Controller
             return response()->json(['errors' => $error->errors()->all()]);
         }
 
-        $form_data = [
+        $file = $request->file('photo');
+        $fileName = time() . '.' . $file->getClientOriginalExtension();
+        $file->storeAs('public/storage/images', $fileName);
+
+        $formData = [
             'name' => $request->name,
             'position' => $request->position,
             'hire_date' => $request->hire_date,
             'phone_number' => $request->phone_number,
             'email' => $request->email,
             'salary' => $request->salary,
+            'photo' => $fileName,
         ];
 
-        Employee::create($form_data);
+        Employee::create($formData);
 
         return response()->json(['success' => 'Data Added successfully.']);
     }
@@ -57,17 +94,51 @@ class EmployeeController extends Controller
     {
         if (request()->ajax()) {
             $employee = Employee::findOrFail($id);
+            $positions = Position::all();
         }
-        return response()->json(['result' => $employee ?? '']);
+        return response()->json([
+            'result' => $employee ?? '',
+            'positions' => $positions ?? '',
+            'current_position' => $employee->position_id ?? null,
+            ]
+        );
     }
 
-    public function show(int $id)
+    /**
+     * Show the specified employee.
+     *
+     * @OA\Get(
+     *     path="/employees/show/{employee}",
+     *     summary="Show the specified employee",
+     *     tags={"Employees"},
+     *     @OA\Parameter(name="employee", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\Response(response="200", description="Successful operation"),
+     *     @OA\Response(response="404", description="Not found"),
+     *     @OA\Response(response="500", description="Server error"),
+     * )
+     */
+    public function show(int $id): Factory|View|Application
     {
         $employee = Employee::findOrFail($id);
 
         return view('employees.show', compact('employee'));
     }
 
+    /**
+     * Update the specified employee.
+     *
+     *
+     * @OA\Put(
+     *     path="/employees/{employee}",
+     *     tags={"Employees"},
+     *     summary="Update the specified employee",
+     *     @OA\Parameter(name="employee", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\Response(response="200", description="Successful operation"),
+     *     @OA\Response(response="422", description="Unprocessable Entity"),
+     *     @OA\Response(response="404", description="Not found"),
+     *     @OA\Response(response="500", description="Server error"),
+     * )
+     */
     public function update(Request $request): JsonResponse
     {
         $error = Validator::make($request->all(), Employee::getValidationRules());
@@ -76,26 +147,57 @@ class EmployeeController extends Controller
             return response()->json(['errors' => $error->errors()->all()]);
         }
 
-        $form_data = [
+        $employee = Employee::find($request->employee_id);
+
+        if (!$employee) {
+            return response()->json(['error' => 'Employee not found']);
+        }
+        $positionId = Position::where('name', $request->position)->value('id');
+
+        if ($request->hasFile('photo')) {
+            $file = $request->file('photo');
+            $fileName = time() . '.' . $file->getClientOriginalExtension();
+            $file->storeAs('public/images', $fileName);
+            if ($employee->photo) {
+                Storage::delete('/public/images/' . $employee->photo);
+            }
+        } else {
+            $fileName = $request->employee_photo;
+        }
+
+        $employeeData = [
             'name' => $request->name,
-            'position' => $request->position,
+            'position' => $positionId,
             'hire_date' => $request->hire_date,
             'phone_number' => $request->phone_number,
             'email' => $request->email,
             'salary' => $request->salary,
+            'photo' => $fileName,
         ];
 
-        Employee::whereId($request->hidden_id)->update($form_data);
+        $employee->update($employeeData);
 
         return response()->json(['success' => 'Data is successfully updated']);
     }
 
-    public function destroy($id)
+    /**
+     * Delete the specified employee.
+     *
+     * @OA\Delete(
+     *     path="employees/{employee}",
+     *     tags={"Employees"},
+     *     summary="Delete the specified employee",
+     *     @OA\Parameter(name="employee", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\Response(response="204", description="No Content"),
+     *     @OA\Response(response="404", description="Not found"),
+     *     @OA\Response(response="500", description="Server error"),
+     * )
+     */
+    public function destroy($id): JsonResponse
     {
         $employee = Employee::findOrFail($id);
         $employee->delete();
 
         return response()->json(['success' => 'Employee deleted successfully']);
-
     }
 }
