# app/Http/Controllers/PositionController.php
@@ -1,0 +1,57 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Position;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+
+class PositionController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Database\Eloquent\Collection|Position[]
+     */
+    public function index(): array|\Illuminate\Database\Eloquent\Collection
+    {
+        return Position::all();
+    }
+
+    /**
+     * Show the form for creating a new resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function create()
+    {
+        return view('positions.create');
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     *
+     */
+    public function store(Request $request): JsonResponse
+    {
+        $request->validate([
+            'name' => 'required|string|max:255',
+        ]);
+
+        Position::create([
+            'name' => $request->name,
+        ]);
+
+        return response()->json(['success' => 'Data Added successfully.']);
+    }
+
+    public function autocompletePositions(Request $request): JsonResponse
+    {
+        $positions = Position::select('name')->where('name', 'LIKE', "%{$request->term}%")->get();
+
+        return response()->json($positions);
+    }
+}
