# resources/views/employees/modal.blade.php
@@ -1,7 +1,10 @@
 <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" id="sample_form" class="form-horizontal" data-url="{{ route('employees.store') }}">
+            <form method="post" id="sample_form" class="form-horizontal" enctype="multipart/form-data" data-url="{{ route('employees.store') }}">
+                @csrf
+                <input type="hidden" name="employee_photo" id="employee_photo">
+                <input type="hidden" name="employee_id" id="employee_id">
                 <div class="modal-header">
                     <h5 class="modal-title" id="ModalLabel">Add New Employee</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -14,7 +17,8 @@
                     </div>
                     <div class="form-group">
                         <label>Position:</label>
-                        <input type="text" name="position" id="position" class="form-control" />
+                        <select name="position" id="position" class="form-control">
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Date of Employment:</label>
@@ -34,6 +38,9 @@
                     </div>
                     <div class="form-group">
                         <label>Photo:</label>
+                        <div class="photo-preview-container">
+                            <img id="photo-preview" src="" width="100" class="img-fluid img-thumbnail" />
+                        </div>
                         <input type="file" name="photo" id="photo" class="form-control" />
                     </div>
                     <input type="hidden" name="action" id="action" value="Add" />
